# conway-rust

./: Cargo.toml  README.md
src/: cli.yml  conway_engine.rs  grid.rs  gui.rs  main.rs
test-files/: bad_test.txt  glider_test.txt  test.txt  test2.txt  test3.txt
